--- a/public/select-tickets.html
+++ b/public/select-tickets.html
@@ -1,14 +1,23 @@
 <!-- public/select-tickets.html -->
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Selecionar Ingressos</title>
 </head>
+
 <body>
   <form action="/select-seats" method="POST">
     <label for="tickets">Quantos ingressos você deseja comprar?</label>
     <input type="number" id="tickets" name="tickets" min="1" max="10" required>
-    <button type="submit">Continuar</button>
+    <button type="submit" onclick="salvarNoLocalStorage()">Continuar</button>
   </form>
 </body>
+
 </html>
+<script>
+  function salvarNoLocalStorage() {
+    const value = parseInt(document.getElementById('tickets').value)
+    localStorage.setItem("qtdIngressos", value);
+  }
+</script>
